--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!--Roboto for MaterialUI-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -40,4 +43,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyBlyfD73_ilke5555a8QlDl1fomSdvxSDI",
+      authDomain: "my-library-b1477.firebaseapp.com",
+      projectId: "my-library-b1477",
+      storageBucket: "my-library-b1477.appspot.com",
+      messagingSenderId: "494706598134",
+      appId: "1:494706598134:web:a784d583e58ae86971ccd7"
+    };
+  </script>
 </html>
